--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,25 @@
-Thumbs.db
-.DS_Store
-.gradle
-build/
-target/
-out/
-.idea
-*.iml
-*.ipr
-*.iws
+/target/
+!.mvn/wrapper/maven-wrapper.jar
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
 .project
 .settings
-.classpath
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/build/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
