--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,10 @@
----
-micronaut:
-  application:
-    name: onboard-assistant
-  server:
-    port: 9000
+server:
+  port: 9000
 
----
-mongodb:
-  uri: "mongodb://${MONGO_HOST:localhost}:${MONGO_PORT:27017}"
-
----
-bot:
-  api:
+spring:
+  data:
+    mongodb:
+      uri: "${MONGO_HOST:mongodb://localhost:27017}"
+slack:
+  auth:
     token: "${OAUTH_TOKEN}"
